# parallel-routing

./: .gitignore  CMakeLists.txt  README.md  block_64x64r6  buglog.md  console  main.cpp  result.txt  test.py
exp/parallel/: CORRAv1PExp.cpp  CORRAv1PExp.h  CORRAv2PExp.cpp  CORRAv2PExp.h  FatTreePExp.h  TZPExp.cpp  TZPExp.h
exp/serial/: CORRAv1SExp.cpp  CORRAv1SExp.h  CORRAv2SExp.cpp  FatTreeSExp.cpp  FatTreeSExp.h  TZSExp.cpp  TZSExp.h
experiment/: CORRADistributedExperiment.cpp  CORRADistributedExperiment.h
experiment/corra_v1/: block_32x32r4  block_64x64r6  corra_v1_exp_parallel.cpp  corra_v1_exp_serial.cpp  corra_v1_parallel.cpp  corra_v1_serial.cpp  local_32x32r4
experiment/corra_v2/: block_64x64r6  corra_v2_exp_parallel.cpp  corra_v2_exp_serial.cpp  corra_v2_parallel.cpp  corra_v2_serial.cpp
experiment/fat_tree/: fat_tree_exp_parallel.cpp  fat_tree_exp_serial.cpp  fat_tree_parallel.cpp  fat_tree_serial.cpp
experiment/parallel/: CORRAv1PExp.cpp  CORRAv1PExp.h  CORRAv2PExp.cpp  CORRAv2PExp.h  FatTreePExp.cpp  FatTreePExp.h  TZPExp.cpp  TZPExp.h
experiment/serial/: CORRAv1SExp.cpp  CORRAv1SExp.h  CORRAv2SExp.cpp  CORRAv2SExp.h
experiment/tz/: tz_exp_parallel.cpp  tz_exp_serial.cpp  tz_parallel.cpp  tz_serial.cpp
graph/: Graph.cpp  Graph.h
graph/fattree/: FatTree.cpp  FatTree.h
graph/smallworld/: GridGraph.cpp  GridGraph.h  SmallWorld2DGrid.cpp  SmallWorld2DGrid.h  SmallWorld2DTorus.cpp  SmallWorld2DTorus.h
graph_entities/: Edge.cpp  Edge.h  Graph.cpp  Graph.h  Topo.cpp  Topo.h  Vertice.cpp  Vertice.h
node/: CORRANode.cpp  CORRANode.h  Edge.cpp  Edge.h  FatTreeNode.cpp  FatTreeNode.h  Node.cpp  Node.h  TZNode.cpp  TZNode.h
routing/: CORRADistributed.cpp  CORRADistributed.h  DijkstraAlgorithm.cpp  DijkstraAlgorithm.h  FatTreeRoutingAlgorithm.cpp  FatTreeRoutingAlgorithm.h  RoutingAlgorithm.h
utils/: CORRAUtils.cpp  CORRAUtils.h  FatTreeUtils.cpp  FatTreeUtils.h  TZUtils.cpp  TZUtils.h  VerticeUtils.cpp  VerticeUtils.h  string_utils.hpp
